--- a/static/oas/iot/components/examples.yaml
+++ b/static/oas/iot/components/examples.yaml
@@ -268,6 +268,15 @@ examples:
       updatedDeviceNum: 5
     }
 
+  CellularBulkUpdateDevicesResponseExample:
+    value: {
+      api: "device/bulkUpdate",
+      ver: "v4.0",
+      code: 1,
+      message: "OK",
+      updatedDeviceNum: 5
+    }
+
   CiscoWLCDeviceBulkUpdatePayloadExample:
     summary: An example of payload of device list for Cisco WLC
     value: {
@@ -364,6 +373,23 @@ examples:
         {
             "deviceid": "6c:6c:d3:aa:d0:81",
             "display_phyPort": "Gi1/0/2"
+        }
+      ]
+    }
+  CellularDeviceBulkUpdatePayloadExample:
+    summary: An example of payload of device list for Mobile devices
+    value: {
+      devicelist: [
+        {
+          "ipAddress": "10.6.72.216",
+          "ipv6Address": "FE80:CD00:0000:0CDE:1257:0000:211E:729C",
+          "imei": "000000000000000",
+          "iccid": "891004234814455936F",
+          "imsi": "313460000000001",
+          "apn": "006-007-001-000",
+          "msisdn": "919825098250",
+          "sessionStart": "ISODate('2022-01-05T14:48:00.000Z')"
+          "sessionEnd": "ISODate('2022-01-10T14:48:00.000Z')"
         }
       ]
     }
