--- a/static/oas/iot/iot.yaml
+++ b/static/oas/iot/iot.yaml
@@ -34,6 +34,21 @@ paths:
       responses:
         $ref: 'api/public/deviceDetail.yaml#/responses'
 
+  /pub/v4.0/device/ip:
+    get:
+      description: 'Get Device Details per IP Address <br/> <b>Rate limiting<b/>: 60 times per minute'
+      operationId: device-detail-ip
+      security:
+      - X-Key-Id:  []
+        X-Access-Key: []
+      summary: Device Detail Per IP
+      tags:
+        - IoT Public API
+      parameters:
+        $ref: 'api/public/deviceDetailPerIP.yaml#/parameters'
+      responses:
+        $ref: 'api/public/deviceDetailPerIP.yaml#/responses'
+
   /pub/v4.0/device/list:
     get:
       description: 'Get a list of all the devices in your IoT Security inventory. <br/> <b>Rate limiting<b/>: 60 times per minute'
@@ -51,7 +66,7 @@ paths:
 
   /pub/v4.0/tag/list:
     get:
-      description: 'Get a list of user-defined tags assigned to IoT devices.' 
+      description: 'Get a list of user-defined tags assigned to IoT devices.'
       operationId: tags-list
       security:
       - X-Key-Id:  []
@@ -130,12 +145,12 @@ paths:
 
   /pub/v4.0/device/bulkUpdate:
     put:
-      description: 'General bulk update devices. Currently, it is being used for DNAC and Cisco Prime integrations.'
+      description: 'Bulk update devices for DNAC and CISCO Prime integrations.'
       operationId: general-bulk-update
       security:
       - X-Key-Id:  []
         X-Access-Key: []
-      summary: Bulk Update Devices - General
+      summary: Bulk Device Updates - DNAC and CISCO Prime
       tags:
         - IoT Public API
       parameters:
@@ -147,12 +162,12 @@ paths:
 
   /pub/v4.0/device/bulkUpdate?updateSource=cisco_wlc:
     put:
-      description: 'Bulk update devices for Cisco WLC'
+      description: 'Bulk device updates for CISCO WLC'
       operationId: cisco-wlc-bulk-update
       security:
       - X-Key-Id:  []
         X-Access-Key: []
-      summary: Bulk Update Devices - Cisco WLC
+      summary: Bulk Device Updates - Cisco WLC
       tags:
         - IoT Public API
       parameters:
@@ -164,12 +179,12 @@ paths:
 
   /pub/v4.0/device/bulkUpdate?updateSource=aruba_wlc:
     put:
-      description: 'Bulk update devices for Aruba WLC'
+      description: 'Bulk device updates for Aruba WLC'
       operationId: aruba-wlc-bulk-update
       security:
       - X-Key-Id:  []
         X-Access-Key: []
-      summary: Bulk Update Devices - Aruba WLC
+      summary: Bulk Device Updates - Aruba WLC
       tags:
         - IoT Public API
       parameters:
@@ -181,12 +196,12 @@ paths:
 
   /pub/v4.0/device/bulkUpdate?updateSource=snmp:
     put:
-      description: 'Bulk update devices for SNMP'
+      description: 'Bulk device updates for SNMP'
       operationId: snmp-bulk-update
       security:
       - X-Key-Id:  []
         X-Access-Key: []
-      summary: Bulk Update Devices - SNMP
+      summary: Bulk Device Updates - SNMP
       tags:
         - IoT Public API
       parameters:
@@ -195,6 +210,38 @@ paths:
         $ref: 'api/public/bulkUpdateSNMP.yaml#/requestBody'
       responses:
         $ref: 'api/public/bulkUpdateSNMP.yaml#/responses'
+
+  /pub/v4.0/device/bulkUpdate?updateSource=cellular:
+    put:
+      description: 'Bulk device updates for cellular devices'
+      operationId: cellular-bulk-update
+      security:
+        - X-Key-Id:  []
+          X-Access-Key: []
+      summary: Bulk Device Updates - Cellular Devices
+      tags:
+        - IoT Public API
+      parameters:
+        $ref: 'api/public/bulkUpdateCellular.yaml#/parameters'
+      requestBody:
+        $ref: 'api/public/bulkUpdateCellular.yaml#/requestBody'
+      responses:
+        $ref: 'api/public/bulkUpdateCellular.yaml#/responses'
+
+  /pub/v4.0/policy/recommendation:
+    get:
+      description: 'Fetch active policy recommendation rules'
+      operationId: policy-recommendation
+      security:
+      - X-Key-Id:  []
+        X-Access-Key: []
+      summary: Security Policy Rule Recommendations
+      tags:
+        - IoT Public API
+      parameters:
+        $ref: 'api/public/policyRecommendation.yaml#/parameters'
+      responses:
+        $ref: 'api/public/policyRecommendation.yaml#/responses'
 
 components:
   securitySchemes:
