remove unknown applications

--- a/static/oas/iot/components/examples.yaml
+++ b/static/oas/iot/components/examples.yaml
@@ -506,9 +506,7 @@ examples:
           'sourceIpList': [],
           'sourceZones': [],
           'apps': [
-              'dhcp',
-              'unknown-udp',
-              'unknown-tcp'
+              'dhcp'
           ],
           'destinationZones': [],
           'destinationProfiles': ['Windows'],
@@ -564,9 +562,7 @@ examples:
             'sourceIpList': [],
             'sourceZones': [],
             'apps': [
-                'rtp-base',
-                'unknown-udp',
-                'unknown-tcp'
+                'rtp-base'
             ],
             'destinationZones': [],
             'destinationProfiles': [],
