--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@docusaurus/utils": "2.0.0-beta.4",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
+    "mdx-mermaid": "^1.2.2",
+    "mermaid": "^9.1.1",
     "mobx": "6.1.8",
     "node": "^15.12.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
