--- a/static/oas/iot/api/public/alertList.yaml
+++ b/static/oas/iot/api/public/alertList.yaml
@@ -1,41 +1,45 @@
 parameters:
-- description: The customer ID specifies the API call for a specific tenant.
+- description: The customer ID to which the API call is directed
   in: query
   name: customerid
   required: true
   schema:
     type: string
-- description: Optional field specifying the alert type as policy_alert. The following value is a string.
+- description: A field that specifies the alert type as policy_alert
   in: query
   name: type
   required: false
   schema:
     type: string
-- description: Optional field to get only active alerts (resolved=no, the default) or resolved alerts (resolved=yes). The following value is a string.
+- description: A filter to retrieve only active alerts (resolved=no, the default) or resolved alerts (resolved=yes)
   in: query
   name: resolved
   required: false
   schema:
     type: string
-- description: Field to get items on subsequent pages. For example, if your first request is pagelength = 100, you will get the first 100 device alerts. To get the next 100, add offset = 100 to your second request. This skips the first 100 alerts and gets the next 100 starting from 101.
+- description: In addition to the pagelength parameter, offset gets items on subsequent pages. For example, if the page length of your first request is 100, you get the first 100 alerts. To get the next 100, add offset=100 to your second request. This skips the first 100 alerts and gets the next 100 starting from 101.
   in: query
   name: offset
   required: false
   schema:
     type: integer
-- description: Optional but recommended field specifying the number of items for each page. The default page length for alerts is 200 and the maximum is 1000. Setting a shorter length improves response times. The following value is an integer.
+- description: The number of items in one response; that is, in one page. The default page length for alerts is 1000 and the maximum is 1000. Setting a shorter length improves response times.
   in: query
   name: pagelength
   required: false
   schema:
     type: integer
-- description: Optional field defining whether the alerts are organized in ascending order asc (oldest to newest) or descending order desc (newest to oldest). The default is desc. The following value is a string.
+- description: The start of a time range for alerts to retrieve. For example, stime=2021-10-6T07:00Z. (It’s unnecessary to set etime=now or etime=<time> because it is always treated as now.)
+  in: query
+  name: stime
+  required: false
+- description: "The direction in which returned alerts are organized: ascending order asc (oldest to newest) or descending order desc (newest to oldest, the default)"
   in: query
   name: sortdirection
   required: false
   schema:
     type: string
-- description: Optional field that defines how alerts are ordered. Only date is supported as the following value and it is a string.
+- description: The device attribute to use for sorting. date and severityNumber are supported as the following value and the value types are string and integer respectively. The default way to sort alerts is by date in descending order.
   in: query
   name: sortfield
   required: false
@@ -50,7 +54,7 @@ parameters:
     format: date-time
 responses:
   '200':
-    description: Successful Response (We only show some importants fields here)
+    description: Successful Response (We only show some important fields here)
     content:
       application/json:
         schema:
