--- a/static/oas/iot/api/public/bulkUpdateCellular.yaml
+++ b/static/oas/iot/api/public/bulkUpdateCellular.yaml
@@ -1,5 +1,5 @@
 parameters:
-  - description: The customer ID specifies the API call for a specific tenant.
+  - description: The customer ID to which the API call is directed
     in: query
     name: customerid
     required: true
