--- a/static/oas/iot/api/public/deviceDetail.yaml
+++ b/static/oas/iot/api/public/deviceDetail.yaml
@@ -1,11 +1,11 @@
 parameters:
-- description: The customer ID specifies the API call for a specific tenant.
+- description: The customer ID to which the API call is directed
   in: query
   name: customerid
   required: true
   schema:
     type: string
-- description: The device ID specifies the MAC address of the device for which you want to get details. For a static IP device, the device ID is its static IP address.
+- description: The MAC address of a device for which you want to get details. For a static IP device, the device ID is its static IP address.
   in: query
   name: deviceid
   required: true
@@ -13,7 +13,7 @@ parameters:
     type: string
 responses:
   '200':
-    description: Successful Response (We only show some importants fields here)
+    description: Successful Response (We only show some important fields here.)
     content:
       application/json:
         schema:
