--- a/static/oas/iot/api/public/deviceList.yaml
+++ b/static/oas/iot/api/public/deviceList.yaml
@@ -1,46 +1,30 @@
 parameters:
-- description: The customer ID specifies the API call for a specific tenant.
+- description: The customer ID to which the API call is directed
   in: query
   name: customerid
   required: true
   schema:
     type: string
-- description: Field to set the start of a time range for retrieving devices.
+- description: An optional string that sets the start of a time range for devices to retrieve. This is the time when a device was last active. (It’s unnecessary to set etime=now or etime=<time> because it is always treated as now.)
   in: query
   name: stime
   required: false
   schema:
     type: string
     format: date-time
-- description: Field to set the end of a time range for retrieving devices.
-  in: query
-  name: etime
-  required: false
-  schema:
-    type: string
-    format: date-time
-- description: Field to get monitored devices or all discovered devices
-  in: query
-  name: filter_monitored
-  required: false
-  schema:
-    type: string
-    enum:
-    - 'true'
-    - 'false'
-- description: Field to get items on subsequent pages
+- description: An optional integer that sets the number of items to skip
   in: query
   name: offset
   required: false
   schema:
     type: integer
-- description: Field specifying thenumber of items for each page.
+- description: An optional integer that sets the number of items in one response; that is, in one page. The maximum page length you can set is 1000. The default page length for alerts, devices, and vulnerability instances is 1000. Because of these high default values, we recommend setting the page length to a smaller number, especially for alerts and vulnerabilities.
   in: query
   name: pagelength
   required: false
   schema:
     type: integer
-- description: Field to determine if all fields of devices needed to return
+- description: The return of more device attributes (true) or fewer attributes (false)
   in: query
   name: detail
   required: false
@@ -49,7 +33,7 @@ parameters:
     enum:
     - 'true'
     - 'false'
-- description: 'Field to set sort direction: ascending or descending'
+- description: The alphanumeric order in which devices are displayed by MAC address. asc indicates an ascending order from smallest tolargest. desc, which is the default, indicates a descending order from largest to smallest.
   in: query
   name: sortdirection
   required: false
@@ -58,7 +42,7 @@ parameters:
     enum:
     - asc
     - desc
-- description: Field to set sorting column
+- description: The device attribute to use for sorting. Currently only MAC is supported.
   in: query
   name: sortfield
   required: false
@@ -75,7 +59,7 @@ parameters:
 
 responses:
   '200':
-    description: Successful Response (We only show some importants fields here)
+    description: Successful Response (We only show some important fields here)
     content:
       application/json:
         schema:
