--- a/static/oas/iot/components/examples.yaml
+++ b/static/oas/iot/components/examples.yaml
@@ -353,7 +353,7 @@ examples:
       message: "OK",
       updatedDeviceNum: 5
     }
-    
+
   CrowdstrikeBulkUpdateDevicesResponseExample:
     value: {
       api: "device/bulkUpdate",
@@ -490,10 +490,13 @@ examples:
           "model": "MacBook Pro",
           "diskEncryptionStatus": "Encrypted",
           "windowsInstalledPatches": "11.1",
-          "windowsInstalledSoftware": "Microsoft 365"
+          "windowsInstalledSoftware": "Microsoft 365",
           "windowsGUID": "6B29FC40-CA47-1067-B31D-00DD010662DA",
           "sccmSite": "Site A",
           "sccmDomain": "sccm.com"
+          }
+      ]
+    }
   CrowdstrikeDeviceBulkUpdatePayloadExample:
     summary: An example of payload of device list for Crowdstrike Falcon
     value: {
@@ -505,7 +508,7 @@ examples:
           "group_name": "Group 1",
           "os_type": "Windows",
           "os_version": "11.1",
-          "os_build": "Beta Build"
+          "os_build": "Beta Build",
           "hostname": "cntl-201-2",
           "serial_number": "6B29FC40-CA47-1067-B31D-00DD010662DA",
           "vendor": "Microsoft"
