--- a/static/oas/iot/iot.yaml
+++ b/static/oas/iot/iot.yaml
@@ -1,16 +1,6 @@
 info:
   description: |
     Please refer [IoT Public API Authentication](iot-public-api-headers) to know how to get API Key<br/>
-    List of public APIs from IoT security:
-    1. Link to [Get Device Detail](iot-public-api#operation/device-detail)
-    2. Link to [Get Device Detail Per IP](iot-public-api#operation/device-detail-ip)
-    3. Link to [Get Device Inventory](iot-public-api#operation/device-inventory)
-    4. Link to [Get Profile Mapping](iot-public-api#operation/profile-mapping)
-    5. Link to [Get Security Alerts](iot-public-api#operation/alert-list)
-    6. Link to [Resolve a Security Alert](iot-public-api#operation/alert-resolve)
-    7. Link to [Get Vulnerabilities](iot-public-api#operation/vulnerability-list)
-    8. Link to [Resolve Vulnerability Instances](iot-public-api#operation/vulnerability-resolve)
-    9. Link to [Get Tags List](iot-public-api#operation/tags-list)
   title: IoT Public API Overview
   version: v4.0
   contact: {}
@@ -103,7 +93,7 @@ paths:
       security:
       - X-Key-Id:  []
         X-Access-Key: []
-      summary: Security Alerts
+      summary: Get Security Alerts
       tags:
         - IoT Public API
       parameters:
@@ -130,12 +120,12 @@ paths:
 
   /pub/v4.0/vulnerability/list:
     get:
-      description: 'Get a list of security alerts. <br/> <b>Rate limiting<b/>: 60 times per minute'
+      description: 'Get a list of vulnerabilities. <br/> <b>Rate limiting<b/>: 60 times per minute'
       operationId: vulnerability-list
       security:
       - X-Key-Id:  []
         X-Access-Key: []
-      summary: Get a list of vulnerabilities.
+      summary: Vulnerabilities
       tags:
         - IoT Public API
       parameters:
