Documentation for the IPAM Bulk update Public API

--- a/static/oas/iot/iot.yaml
+++ b/static/oas/iot/iot.yaml
@@ -234,6 +234,7 @@ paths:
         $ref: 'api/public/bulkUpdateCellular.yaml#/requestBody'
       responses:
         $ref: 'api/public/bulkUpdateCellular.yaml#/responses'
+  
   /pub/v4.0/device/bulkUpdate?updateSource=sccm:
     put:
       description: 'Bulk device updates for sccm devices'
@@ -250,6 +251,7 @@ paths:
         $ref: 'api/public/bulkUpdateSccm.yaml#/requestBody'
       responses:
         $ref: 'api/public/bulkUpdateSccm.yaml#/responses'
+  
   /pub/v4.0/device/bulkUpdate?updateSource=crowdstrike_falcon:
     put:
       description: 'Bulk device updates for Crowdstrike Falcon devices'
@@ -266,6 +268,23 @@ paths:
         $ref: 'api/public/bulkUpdateCrowdstrike.yaml#/requestBody'
       responses:
         $ref: 'api/public/bulkUpdateCrowdstrike.yaml#/responses'
+  
+  /pub/v4.0/network/subnetBulkUpdate?updateSource=ipam_infoblox:
+    put:
+      description: 'Bulk subnet updates from customer IPAM (infoblox)'
+      operationId: ipam-subnet-bulk-update
+      security:
+        - X-Key-Id:  []
+          X-Access-Key: []
+      summary: Bulk Subnet Updates - IPAM Infoblox
+      tags:
+        - IoT Public API
+      parameters:
+        $ref: 'api/public/bulkUpdateIPAMSubnet.yaml#/parameters'
+      requestBody:
+        $ref: 'api/public/bulkUpdateIPAMSubnet.yaml#/requestBody'
+      responses:
+        $ref: 'api/public/bulkUpdateIPAMSubnet.yaml#/responses'
 
   /pub/v4.0/policy/recommendation:
     get:
