--- a/static/oas/tp/api/requests/get-threats.yaml
+++ b/static/oas/tp/api/requests/get-threats.yaml
@@ -8,8 +8,8 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TPP-API-KEY: API_KEY' \
-      'https://api.tpp.paloaltonetworks.com/service/publicapi/v1/threats?id=280392504'
+    curl -H 'X-TV-API-KEY: API_KEY' \
+      'https://api.threatvault.paloaltonetworks.com/service/v1/threats?id=280392504'
     ```
 
 - name: name
@@ -20,13 +20,12 @@ parameters:
     Query all Threat signatures that fuzzy match words in the signature names
     
     > Length of name must be greater or equal to 3 and less or equal to 255.
-    >
-    > Only alphanumeric characters are allowed. Any special characters will be ignored.
+  
 
     ---
     ```
-    curl -H 'X-TPP-API-KEY: API_KEY' \
-      'https://api.tpp.paloaltonetworks.com/service/publicapi/v1/threats?name=Code+Injection'
+    curl -H 'X-TV-API-KEY: API_KEY' \
+      'https://api.threatvault.paloaltonetworks.com/service/v1/threats?name=Code+Injection'
     ```
 
 - name: cve
@@ -38,13 +37,13 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TPP-API-KEY: API_KEY' \
-      'https://api.tpp.paloaltonetworks.com/service/publicapi/v1/threats?cve=CVE-2020-1234'
+    curl -H 'X-TV-API-KEY: API_KEY' \
+      'https://api.threatvault.paloaltonetworks.com/service/v1/threats?cve=CVE-2020-1234'
     ```
     or 
     ```
-    curl -H 'X-TPP-API-KEY: API_KEY' \
-      'https://api.tpp.paloaltonetworks.com/service/publicapi/v1/threats?cve=CVE-2021'
+    curl -H 'X-TV-API-KEY: API_KEY' \
+      'https://api.threatvault.paloaltonetworks.com/service/v1/threats?cve=CVE-2021'
     ```
 
 
@@ -57,8 +56,8 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TPP-API-KEY: API_KEY' \
-      'https://api.tpp.paloaltonetworks.com/service/publicapi/v1/threats?fromReleaseVersion=8440&toReleaseVersion=8446'
+    curl -H 'X-TV-API-KEY: API_KEY' \
+      'https://api.threatvault.paloaltonetworks.com/service/v1/threats?fromReleaseVersion=8440&toReleaseVersion=8446'
     ```
 
 
@@ -80,8 +79,8 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TPP-API-KEY: API_KEY' \
-      'https://api.tpp.paloaltonetworks.com/service/publicapi/v1/threats?fromReleaseVersion=8440&toReleaseVersion=8446'
+    curl -H 'X-TV-API-KEY: API_KEY' \
+      'https://api.threatvault.paloaltonetworks.com/service/v1/threats?fromReleaseVersion=8440&toReleaseVersion=8446'
     ```
 
 - name: toReleaseVersion
@@ -102,8 +101,8 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TPP-API-KEY: API_KEY' \
-      'https://api.tpp.paloaltonetworks.com/service/publicapi/v1/threats?releaseDate=2021-08-17'
+    curl -H 'X-TV-API-KEY: API_KEY' \
+      'https://api.threatvault.paloaltonetworks.com/service/v1/threats?releaseDate=2021-08-17'
     ```
 
 - name: releaseVersion
@@ -115,8 +114,8 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TPP-API-KEY: API_KEY' \
-      'https://api.tpp.paloaltonetworks.com/service/publicapi/v1/threats?releaseVersion=8446'
+    curl -H 'X-TV-API-KEY: API_KEY' \
+      'https://api.threatvault.paloaltonetworks.com/service/v1/threats?releaseVersion=8446'
     ```
 
 - name: type
@@ -135,6 +134,6 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TPP-API-KEY: API_KEY' \
-      'https://api.tpp.paloaltonetworks.com/service/publicapi/v1/threats?type=ips'
+    curl -H 'X-TV-API-KEY: API_KEY' \
+      'https://api.threatvault.paloaltonetworks.com/service/v1/threats?type=ips'
     ```
