--- a/static/oas/tp/atp.yaml
+++ b/static/oas/tp/atp.yaml
@@ -11,7 +11,7 @@ info:
     email: tp-infra@paloaltonetworks.com
 openapi: 3.0.1
 servers:
-  - url: 'https://tpp.tpcloud.paloaltonetworks.com/service/publicapi/v1/'
+  - url: 'https://api.threatvault.paloaltonetworks.com/service/v1'
     description: The base URI 
 tags:
 - description: Advanced Threat Prevention API endpoints are listed below. These APIs are currently in BETA. Please contact your Palo Alto Networks salesperson for more information.
@@ -23,7 +23,7 @@ paths:
       operationId: post_atp_reports_batch_mode
       description: A POST request to retrieve a single (or multiple) unique, automatically generated report, based on the analysis details provided by Advanced Threat Prevention for a specific threat. This includes contextual data specific to your network by providing various session data, transaction info, and malware details. User must provide **one or more** report IDs in request body.
       security:
-        - X-TPP-API-KEY: []
+        - X-TV-API-KEY: []
       summary: Get ATP reports
       requestBody:
         required: true
@@ -46,7 +46,7 @@ paths:
       operationId: get_atp_pcaps
       description: A GET request to retrieve the raw payload associated with the report ID as a PCAP.
       security:
-        - X-TPP-API-KEY: []
+        - X-TV-API-KEY: []
       summary: Get ATP cloud report PCAP
       parameters:
         $ref: 'api/requests/get-atp-pcap.yaml#/parameters'
