--- a/static/oas/tp/api/requests/get-release-notes.yaml
+++ b/static/oas/tp/api/requests/get-release-notes.yaml
@@ -17,6 +17,6 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TV-API-KEY: API_KEY' \
+    curl -H 'X-API-KEY: API_KEY' \
       'https://api.threatvault.paloaltonetworks.com/service/v1/release-notes?type=content&version=8446-6886'
     ```
