--- a/static/oas/tp/api/requests/get-threats.yaml
+++ b/static/oas/tp/api/requests/get-threats.yaml
@@ -8,7 +8,7 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TV-API-KEY: API_KEY' \
+    curl -H 'X-API-KEY: API_KEY' \
       'https://api.threatvault.paloaltonetworks.com/service/v1/threats?id=280392504'
     ```
 
@@ -20,11 +20,10 @@ parameters:
     Query all Threat signatures that fuzzy match words in the signature names
     
     > Length of name must be greater or equal to 3 and less or equal to 255.
-  
 
     ---
     ```
-    curl -H 'X-TV-API-KEY: API_KEY' \
+    curl -H 'X-API-KEY: API_KEY' \
       'https://api.threatvault.paloaltonetworks.com/service/v1/threats?name=Code+Injection'
     ```
 
@@ -37,12 +36,12 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TV-API-KEY: API_KEY' \
+    curl -H 'X-API-KEY: API_KEY' \
       'https://api.threatvault.paloaltonetworks.com/service/v1/threats?cve=CVE-2020-1234'
     ```
     or 
     ```
-    curl -H 'X-TV-API-KEY: API_KEY' \
+    curl -H 'X-API-KEY: API_KEY' \
       'https://api.threatvault.paloaltonetworks.com/service/v1/threats?cve=CVE-2021'
     ```
 
@@ -56,7 +55,7 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TV-API-KEY: API_KEY' \
+    curl -H 'X-API-KEY: API_KEY' \
       'https://api.threatvault.paloaltonetworks.com/service/v1/threats?fromReleaseVersion=8440&toReleaseVersion=8446'
     ```
 
@@ -79,7 +78,7 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TV-API-KEY: API_KEY' \
+    curl -H 'X-API-KEY: API_KEY' \
       'https://api.threatvault.paloaltonetworks.com/service/v1/threats?fromReleaseVersion=8440&toReleaseVersion=8446'
     ```
 
@@ -101,7 +100,7 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TV-API-KEY: API_KEY' \
+    curl -H 'X-API-KEY: API_KEY' \
       'https://api.threatvault.paloaltonetworks.com/service/v1/threats?releaseDate=2021-08-17'
     ```
 
@@ -114,7 +113,7 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TV-API-KEY: API_KEY' \
+    curl -H 'X-API-KEY: API_KEY' \
       'https://api.threatvault.paloaltonetworks.com/service/v1/threats?releaseVersion=8446'
     ```
 
@@ -134,6 +133,6 @@ parameters:
 
     ---
     ```
-    curl -H 'X-TV-API-KEY: API_KEY' \
+    curl -H 'X-API-KEY: API_KEY' \
       'https://api.threatvault.paloaltonetworks.com/service/v1/threats?type=ips'
     ```
