--- a/static/oas/tp/api/responses/get-release-notes.yaml
+++ b/static/oas/tp/api/responses/get-release-notes.yaml
@@ -6,12 +6,18 @@ responses:
         schema:
           $ref: '../../components/schemas.yaml#/schemas/GetReleaseNotesSuccessResponse'
     headers:
-      X-RateLimit-Limit:
-        $ref: '../../components/headers.yaml#/headers/X-RateLimit-Limit'
-      X-RateLimit-Remaining:
-        $ref: '../../components/headers.yaml#/headers/X-RateLimit-Remaining'
-      X-RateLimit-Reset:
-        $ref: '../../components/headers.yaml#/headers/X-RateLimit-Reset'
+      X-Minute-RateLimit-Limit:
+        $ref: '../../components/headers.yaml#/headers/X-Minute-RateLimit-Limit'
+      X-Minute-RateLimit-Remaining:
+        $ref: '../../components/headers.yaml#/headers/X-Minute-RateLimit-Remaining'
+      X-Minute-RateLimit-Reset:
+        $ref: '../../components/headers.yaml#/headers/X-Minute-RateLimit-Reset'
+      X-Day-RateLimit-Limit:
+        $ref: '../../components/headers.yaml#/headers/X-Day-RateLimit-Limit'
+      X-Day-RateLimit-Remaining:
+        $ref: '../../components/headers.yaml#/headers/X-Day-RateLimit-Remaining'
+      X-Day-RateLimit-Reset:
+        $ref: '../../components/headers.yaml#/headers/X-Day-RateLimit-Reset'
 
   '4XX':
     description: client related error response
